--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <button type="button" id="go">Démarrer</button>
-  <div id="message"></div>
+  <button type="button" class="go" id="go">Démarrer</button>
+  
+  <div id="message" class="message"></div>
 
-  <main id="playground"></main>
+  <main id="playground" class="playground"></main>
+
+  <p id="result" class="result"></p>
+  <button id="retry" class="retry"></button>
 
   <script src="js/app.js"></script>
 </body>
